# OpenStackProjects

./: build.gradle  ca-cert.pem  gradle.properties  local.properties  packages.list  settings.gradle  stb.jks  tablet_core_hardware.xml
Opaque/: build.gradle
Opaque/src/androidTest/java/com/undatech/opaque/: ExampleInstrumentedTest.java
Opaque/src/main/: AndroidManifest.xml
Opaque/src/main/assets/ssl/certs/: ca-cert.pem  console_2.vv
Opaque/src/main/java/com/undatech/opaque/: ConnectionGridActivity.java  ConnectionSetupActivity.java  MessageDialogs.java  RemoteCanvas.java  RemoteCanvasActivity.java  RemoteCanvasActivityHandler.java  SpiceCommunicator.java
Opaque/src/main/java/com/undatech/opaque/dialogs/: GetTextFragment.java
Opaque/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
Opaque/src/main/res/layout/: canvas.xml
Opaque/src/test/java/com/undatech/opaque/: ExampleUnitTest.java
PubkeyGenerator/: AndroidManifest.xml  README.md  build.gradle
PubkeyGenerator/res/values/: strings.xml
PubkeyGenerator/src/com/iiordanov/pubkeygenerator/: AbstractBean.java  Colors.java  EastAsianWidth.java  Encryptor.java  EntropyDialog.java  EntropyView.java  GeneratePubkeyActivity.java  OnDbWrittenListener.java  OnEntropyGatheredListener.java  PreferenceConstants.java  PubkeyBean.java  PubkeyDatabase.java  PubkeyUtils.java  RobustSQLiteOpenHelper.java  UberColorPickerDialog.java  VolumePreference.java  XmlBuilder.java
PubkeyGenerator/src/com/jcraft/jzlib/: Adler32.java  Deflate.java  InfBlocks.java  InfCodes.java  InfTree.java  Inflate.java  JZlib.java  StaticTree.java  Tree.java  ZInputStream.java  ZOutputStream.java  ZStream.java  ZStreamException.java
PubkeyGenerator/src/com/ksmaze/android/preference/: ListPreferenceMultiSelect.java
PubkeyGenerator/src/net/sourceforge/jsocks/: Authentication.java  Proxy.java  ProxyMessage.java  ProxyServer.java  Socks4Message.java  Socks5DatagramSocket.java  Socks5Message.java  Socks5Proxy.java  SocksException.java  SocksSocket.java  UDPRelayServer.java
PubkeyGenerator/src/net/sourceforge/jsocks/server/: ServerAuthenticatorNone.java
aSPICE/: build.gradle
aSPICE/src/androidTest/java/com/jzby/vmwork/: ExampleInstrumentedTest.java  GridActivityTest.java
aSPICE/src/main/: AndroidManifest.xml
aSPICE/src/main/cpp/: CMakeLists.txt
aSPICE/src/main/cpp/android/: android-io.c  android-service.c  android-spice-widget.c  android-spicy.c
aSPICE/src/main/cpp/gtk/: bio-gio.c  channel-base.c  channel-cursor.c  channel-display-mjpeg.c  channel-display.c  channel-inputs.c  channel-main.c  channel-playback.c  channel-port.c  channel-record.c  channel-smartcard.c  channel-usbredir.c  channel-webdav.c  client_sw_canvas.c  continuation.c  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  decode-glz-tmpl.c  decode-glz.c  decode-jpeg.c  decode-zlib.c  gio-coroutine.c  glib-compat.c  glib-compat.h  smartcard-manager-priv.h  smartcard-manager.c  spice-audio.c  spice-channel-priv.h  spice-channel.c  spice-client.c  spice-glib-enums.c  spice-gstaudio.c  spice-gtk-session.c  spice-marshal.c  spice-option.c  spice-proxy.c  spice-pulse.c  spice-session-priv.h  spice-session.c  (+8 more)
aSPICE/src/main/cpp/project/: spice_project.IAB  spice_project.IAD  spice_project.IMB  spice_project.IMD  spice_project.PFI  spice_project.PO  spice_project.PR  spice_project.PRI  spice_project.SearchResults  spice_project.WK3
aSPICE/src/main/java/com/jzby/android/bc/: BCFactory.java  (+18 more)
aSPICE/src/main/java/com/jzby/util/: ByteBufferStack.java  HttpHelper.java  JZInputDevice.java  ObjectPool.java  PreferenceUtil.java  RandomString.java  SafeObjectPool.java  TenantProcess.java  UsbStoreInfo.java  ViewFactory.java
aSPICE/src/main/java/com/jzby/view/: ListPopWindow.java  MyDialog.java  MyProgressDialog.java
aSPICE/src/main/java/com/jzby/vmwork/: AbstractBitmapData.java  AbstractBitmapDrawable.java  AbstractConnectionBean.java  AbstractMetaKeyBean.java  App.java  BitmapImplHint.java  COLORMODEL.java  CapabilityInfo.java  CapsContainer.java  ChangePwdActivity.java  ClipboardMonitor.java  ColorModel256.java  ColorModel64.java  ColorModel8.java  CompactBitmapData.java  ConnectionBean.java  ConnectionListActivity.java  ConnectionSettable.java  Constants.java  DH.java  Database.java  Decoder.java  DesCipher.java  FullBufferBitmapData.java  GridActivity.java  IConnectionBean.java  IMetaKey.java  IMetaList.java  IMostRecentBean.java  ISentText.java  InStream.java  LargeBitmapData.java  LoginActivity.java  MainConfiguration.java  MemInStream.java  MetaKeyBase.java  MetaKeyBean.java  MetaList.java  MostRecentBean.java  PasswordManager.java  (+17 more)
aSPICE/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
aSPICE/src/main/res/drawable/: btn_bg_selector.xml  dialog_btn_select.xml  dialog_btn_unselect.xml  ll_login_bg.xml  pb_loading.xml  remote_layer.xml
aSPICE/src/main/res/layout/: connection_list_entry.xml  get_text.xml  import_tls_ca_dialog.xml  loading_dialog.xml  metakey.xml  pop_window.xml  video_player.xml
aSPICE/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
aSPICE/src/main/res/values-1280x1024/: styles.xml
aSPICE/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
aSPICE/src/test/java/com/jzby/vmwork/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+113 files in other folders)
